--- a/server/manager/pom.xml
+++ b/server/manager/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>processor</artifactId>
-    <name>Processor</name>
+    <artifactId>manager</artifactId>
+    <name>Manager</name>
 
     <dependencies>
         <dependency>
