--- a/server/dao/src/main/resources/log4j.properties
+++ b/server/dao/src/main/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%t] %-5p %m%n
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE.Encoding=UTF-8
 log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.LOGFILE.File=../../log/dai.log
+log4j.appender.LOGFILE.File=log/dai.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.Threshold=ALL
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
