--- a/server/manager/pom.xml
+++ b/server/manager/pom.xml
@@ -10,6 +10,15 @@
     <artifactId>manager</artifactId>
     <name>Manager</name>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>ge.ai.domino</groupId>
