--- a/server/server-util/pom.xml
+++ b/server/server-util/pom.xml
@@ -1,24 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>server</artifactId>
+        <artifactId>dai</artifactId>
         <groupId>ge.ai.domino</groupId>
         <version>0.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>caching</artifactId>
-    <name>Caching</name>
+    <artifactId>server-util</artifactId>
+    <name>Server util</name>
 
     <dependencies>
         <dependency>
             <groupId>ge.ai.domino</groupId>
-            <artifactId>dao</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ge.ai.domino</groupId>
-            <artifactId>server-util</artifactId>
+            <artifactId>domain</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
