--- a/console/debug/pom.xml
+++ b/console/debug/pom.xml
@@ -1,18 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dai</artifactId>
+        <artifactId>console</artifactId>
         <groupId>ge.ai.domino</groupId>
         <version>0.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>console</artifactId>
-    <name>Console</name>
-    <packaging>pom</packaging>
+    <artifactId>debug</artifactId>
+    <name>Debug</name>
 
-    <modules>
-        <module>ui</module>
-        <module>debug</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>manager</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
