working on opponent plays grouping

--- a/server/manager/pom.xml
+++ b/server/manager/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>server-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.10</version>
+        </dependency>
     </dependencies>
 </project>
