--- a/server/dao/pom.xml
+++ b/server/dao/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>postgresql</artifactId>
             <version>9.4.1209.jre7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
