--- a/server/manager/pom.xml
+++ b/server/manager/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>reflections</artifactId>
             <version>0.9.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 </project>
