--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -1,25 +1,44 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>server</artifactId>
+        <artifactId>dai</artifactId>
         <groupId>ge.ai.domino</groupId>
         <version>1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>caching</artifactId>
-    <name>Caching</name>
+    <artifactId>manager</artifactId>
+    <name>Manager</name>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>ge.ai.domino</groupId>
-            <artifactId>dao</artifactId>
+            <artifactId>caching</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>ge.ai.domino</groupId>
             <artifactId>server-util</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.0</version>
         </dependency>
     </dependencies>
 </project>
