--- a/server-util/pom.xml
+++ b/server-util/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>server</artifactId>
+        <artifactId>dai</artifactId>
         <groupId>ge.ai.domino</groupId>
         <version>1.3</version>
     </parent>
@@ -10,4 +10,11 @@
     <artifactId>server-util</artifactId>
     <name>Server util</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
