--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,26 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>server</artifactId>
+        <artifactId>dai</artifactId>
         <groupId>ge.ai.domino</groupId>
         <version>1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dao</artifactId>
-    <name>DAO</name>
+    <artifactId>service</artifactId>
+    <name>Service</name>
 
     <dependencies>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4.1209.jre7</version>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>dao</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.0</version>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>manager</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
