working on MinMaxPredictor optimization

--- a/console/debug/pom.xml
+++ b/console/debug/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>manager</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>math</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
