added new move for replay game operations

--- a/console/debug/src/main/resource/mode/min_max_predictor_mode.properties
+++ b/console/debug/src/main/resource/mode/min_max_predictor_mode.properties
@@ -1,3 +1,4 @@
 ##### min_max_predictor_mode
 useOpponentTilesPredictor=true
 opponentTilesPredictor=MIN_MAX
+opponentPlayHeuristicsDiffsFunctionName=opponentPlayHeuristicsDiffsFunction_initialForOptimization
