--- a/console/debug/src/main/resource/mode/general_strategy_predictor_mode.properties
+++ b/console/debug/src/main/resource/mode/general_strategy_predictor_mode.properties
@@ -1,3 +1,4 @@
 ##### general_strategy_predictor_mode
 useOpponentTilesPredictor=true
 opponentTilesPredictor=GENERAL_STRATEGY
+opponentPlayHeuristicsDiffsFunctionName=opponentPlayHeuristicsDiffsFunction_initialForOptimization
