--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                 <module>p2p-server</module>
                 <module>p2p-client</module>
                 <module>math</module>
-                <module>multithreading-client</module>
+                <module>multi-processor-client</module>
             </modules>
         </profile>
     </profiles>
