added date filter for frouped games

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>ge.ai.domino</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
             <artifactId>util</artifactId>
             <version>${project.version}</version>
         </dependency>
