--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -22,6 +22,11 @@
     <dependencies>
         <dependency>
             <groupId>ge.ai.domino</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
             <artifactId>caching</artifactId>
             <version>${project.version}</version>
         </dependency>
