--- a/console/ui/pom.xml
+++ b/console/ui/pom.xml
@@ -46,6 +46,11 @@
         </dependency>
         <dependency>
             <groupId>ge.ai.domino</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
             <artifactId>service</artifactId>
             <version>${project.version}</version>
         </dependency>
