--- a/robot/pom.xml
+++ b/robot/pom.xml
@@ -16,5 +16,11 @@
             <artifactId>naturalmouse</artifactId>
             <version>2.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>ge.ai.domino</groupId>
+            <artifactId>util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
